syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "soulfire/common.proto";
import "google/protobuf/timestamp.proto";

message InstanceConfig {
  repeated SettingsNamespace settings = 1;
  repeated MinecraftAccountProto accounts = 2;
  repeated ProxyProto proxies = 3;
}

message InstanceCreateRequest {
  string friendlyName = 1;
}

message InstanceCreateResponse {
  string id = 1;
}

message InstanceDeleteRequest {
  string id = 1;
}

message InstanceDeleteResponse {
}

enum InstanceState {
  STARTING = 0;
  RUNNING = 1;
  PAUSED = 2;
  STOPPING = 3;
  STOPPED = 4;
}

message InstanceListRequest {
}

message InstanceListResponse {
  message Instance {
    string id = 1;
    string friendly_name = 2;
    string icon = 5;
    InstanceState state = 3;
    repeated InstancePermissionState instance_permissions = 4;
  }

  repeated Instance instances = 1;
}

message InstancePermissionState {
  InstancePermission instance_permission = 1;
  bool granted = 2;
}

message InstanceInfoRequest {
  string id = 1;
}

message InstanceInfoResponse {
  string friendly_name = 1;
  string icon = 5;
  InstanceConfig config = 2;
  InstanceState state = 3;
  repeated InstancePermissionState instance_permissions = 4;
}

message InstanceUpdateMetaRequest {
  string id = 1;
  oneof meta {
    string friendly_name = 2;
    string icon = 3;
  }
}

message InstanceUpdateMetaResponse {
}

message InstanceUpdateConfigRequest {
  string id = 1;
  InstanceConfig config = 2;
}

message InstanceUpdateConfigResponse {
}

message InstanceStateChangeRequest {
  string id = 1;
  InstanceState state = 2;
}

message InstanceStateChangeResponse {
}

message InstanceAuditLogsRequest {
  string id = 1;
}

message InstanceAuditLogsResponse {
  enum AuditLogType {
    EXECUTE_COMMAND = 0;
    START_ATTACK = 1;
    PAUSE_ATTACK = 2;
    RESUME_ATTACK = 3;
    STOP_ATTACK = 4;
  }

  message AuditLog {
    string id = 1;
    string user_id = 2;
    string user_name = 3;
    AuditLogType type = 4;
    google.protobuf.Timestamp timestamp = 5;
    string data = 6;
  }

  repeated AuditLog logs = 1;
}

service InstanceService {
  rpc createInstance(InstanceCreateRequest) returns (InstanceCreateResponse);
  rpc deleteInstance(InstanceDeleteRequest) returns (InstanceDeleteResponse);
  rpc listInstances(InstanceListRequest) returns (InstanceListResponse);
  rpc getInstanceInfo(InstanceInfoRequest) returns (InstanceInfoResponse);
  rpc updateInstanceMeta(InstanceUpdateMetaRequest) returns (InstanceUpdateMetaResponse);
  rpc updateInstanceConfig(InstanceUpdateConfigRequest) returns (InstanceUpdateConfigResponse);
  rpc changeInstanceState(InstanceStateChangeRequest) returns (InstanceStateChangeResponse);
  rpc getAuditLogs(InstanceAuditLogsRequest) returns (InstanceAuditLogsResponse);
}
