syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

message LoginRequest {
  string username = 1;
}

message NextAuthFlowResponse {
  message EmailCode {
    uint32 digits = 1;
  }

  message Success {
    string token = 1;
  }

  message Failure {
    string message = 1;
  }

  string authFlowToken = 1;
  oneof next {
    EmailCode email_code = 2;
    Success success = 3;
    Failure failure = 4;
  }
}

message EmailCodeRequest {
  repeated uint32 code = 1;
}

service LoginService {
  rpc login(LoginRequest) returns (NextAuthFlowResponse);
  rpc emailCode(EmailCodeRequest) returns (NextAuthFlowResponse);
}
